# cex

./: .gitignore  AGENTS.md  PHASES.md  README.md  config.py  config.toml  docker-compose.yml  main.py  package-lock.json  pyproject.toml  setup_db.py
api/: server.py
docs/: config.md  explain.md  ingestion.md  llm.md  schema.md  search.md
explain/: engine.py
ingestion/: database.py  engine.py  models.py  parser.py
llm/: client.py  logger.py  prompts.py
patch/: diffing.py  engine.py  models.py  prompts.py
recommend/: engine.py  models.py  prompts.py  validator.py
search/: embeddings.py  retriever.py
skeleton/: __init__.py  engine.py  enrich.py  models.py  writer.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  types.ts
ui/src/components/: CodePanel.tsx  ExercisePanel.tsx  ExplanationPanel.tsx  ExplorerPanel.tsx  FileTree.tsx  Onboarding.tsx  SearchBar.tsx
